--- a/views/users/order_success.hbs
+++ b/views/users/order_success.hbs
@@ -1,10 +1,59 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col">
-            <div class="text-center bg-gradient bg-secondary mt-2 text-white rounded shadow">
-                <h1>order success</h1>
-                <a href="/orders" class="btn btn-primary mb-2">View Orders</a>
-            </div>
+<section class="bg-white py-8 antialiased dark:bg-gray-900 md:py-16">
+  <form action="#" class="mx-auto max-w-screen-xl px-4 2xl:px-0">
+    <div class="mx-auto max-w-3xl">
+      <h2 class="text-xl font-semibold text-gray-900 dark:text-white sm:text-2xl">Order Placed</h2>
+
+      <div class="mt-6 space-y-4 border-b border-t border-gray-200 py-8 dark:border-gray-700 sm:mt-8">
+        <h4 class="text-lg font-semibold text-gray-900 dark:text-white">Billing & Delivery information</h4>
+
+        <dl>
+          <dt class="text-base font-medium text-gray-900 dark:text-white">{{user.Name}}</dt>
+          <dd class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">{{order_details.delivery_details.address}},{{order_details.delivery_details.pin_code}}</dd>
+          <dd class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">{{order_details.delivery_details.mobile_number}}</dd>
+          <dd class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">{{user.Email}}</dd>
+
+        </dl>
+      </div>
+
+      <div class="mt-6 sm:mt-8">
+        <div class="relative overflow-x-auto border-b border-gray-200 dark:border-gray-800">
+
+          <table class="w-full text-left font-medium text-gray-900 dark:text-white md:table-fixed">
+            <tbody class="divide-y divide-gray-200 dark:divide-gray-800">
+              {{#each products_list}}
+              <tr>
+                <td class="whitespace-nowrap py-4 md:w-[384px]">
+                  <div class="flex items-center gap-4">
+                    <a href="#" class="flex items-center aspect-square w-10 h-10 shrink-0">
+                      <img class="h-auto w-full max-h-full dark:hidden" src="product_images/{{this.product._id}}.jpg" alt="imac image" />
+                    </a>
+                    <a href="#" class="hover:underline">{{this.product.Name}}</a>
+                  </div>
+                </td>
+                <td class="p-4 text-base font-normal text-gray-900 dark:text-white">x {{this.quantity}}</td>
+                <td class="p-4 text-right text-base font-bold text-gray-900 dark:text-white">
+                <span style="font-weight: bold;"> ₹ {{this.product.Price}}</span></td>
+              </tr>
+              {{/each}}
+            </tbody>
+          </table>
         </div>
+
+        <div class="mt-4 space-y-6">
+          <div class="space-y-4">
+            <dl class="flex items-center justify-between gap-4 border-t border-gray-200 pt-2 dark:border-gray-700">
+              <dt class="text-lg font-bold text-gray-900 dark:text-white">Total</dt>
+              <dd class="text-lg font-bold text-gray-900 dark:text-white">₹{{order_details.total_amount}}</dd>
+            </dl>
+          </div>
+          <div class="gap-4 sm:flex sm:items-center">
+            <a href="/" 
+           style="text-decoration: none;"
+            class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">
+            Return to Shopping</a>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+  </form>
+</section>
