--- a/views/admin/edit_product.hbs
+++ b/views/admin/edit_product.hbs
@@ -1,28 +1,33 @@
-<div class="container">
+<div class="container bg-white">
     <div class="row" style="justify-content: center;">
-        <div class="col-md-8  bg-gradient bg-secondary mt-2 text-white rounded shadow">
-            <h2 class="text-center">Edit Product</h2>
+        <div class="col-md-8  bg-white mt-2 text-white rounded shadow">
+            <h2 class="text-center text-xl font-bold text-gray-900 dark:text-white ">Edit Product</h2>
             <form action="/admin/edit_product?id={{product._id}}" enctype="multipart/form-data" method="POST">
-                <label for="">Name</label>
-                <input type="text" name="Name" class="form-control" value="{{product.Name}}">
-                <label for="">Category</label>
-                <input type="text" name="Category" class="form-control" value="{{product.Category}}">
-                <label for="">Description</label>
-                <input type="text" name="Description" class="form-control" value="{{product.Description}}">
-                <label for="">Price(₹)</label>
-                <input type="number" name="Price" class="form-control" value="{{product.Price}}">
+                <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
+                <input type="text" name="Name" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.Name}}">
+                <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Category</label>
+                <input type="text" name="Category" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.Category}}">
+                <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Description</label>
+                <input type="text" name="Description" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.Description}}">
+                <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Price(₹)</label>
+                <input type="number" name="Price" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.Price}}">
                 <img src="/product_images/{{product._id}}.jpg" alt="" style="width: 100px; heigh:50px;" id="Img"> 
-                <br>
-                <label for="">Image</label>
-                <input type="file" name="Image" class="form-control" onchange="change_img(event)">
-                <button type="submit" class="btn btn-primary mt-3" >Submit</button>
+                <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Image</label>
+                <input onchange="change_condition()"
+                class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
+                id="Image" name="Image" type="file">
+                <!-- hidden input below is used to pass whether image is changed or not -->
+                <input type="text" value="false" id="Condition" name="Condition" hidden>
+                 <button type="submit"
+                class="inline-flex items-center px-5 py-2.5 mt-4 sm:mt-6 text-sm font-medium text-center text-white bg-gray-700 rounded-lg focus:ring-4 focus:ring-gray-200 dark:focus:ring-primary-900 hover:bg-primary-800">
+                Submit
+            </button>
             </form>
         </div>
     </div>
 </div>
 <script>
-    function change_img(event){
-        console.log(event)
-        document.getElementById('Img').src=URL.createObjectURL(event.target.files[0])
-    }
+  function change_condition(){
+    document.getElementById("Condition").value="true"
+  }
 </script>
