--- a/views/admin/add_product.hbs
+++ b/views/admin/add_product.hbs
@@ -10,12 +10,19 @@
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                         placeholder="Type product name" required>
                 </div>
-                <div class="w-full">
-                    <label for="Category"
-                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Category</label>
+                 <div class="sm:col-span-2">
+                    <label for="Category" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                        Category </label>
                     <input type="text" name="Category" id="Category"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                         placeholder="Product category" required>
+                </div>
+                <div class="w-full">
+                    <label for="Color"
+                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Color</label>
+                    <input type="text" name="Color" id="Color"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                        placeholder="Product color" required>
                 </div>
                 <div class="w-full">
                     <label for="Price"
