--- a/views/admin/admin_home.hbs
+++ b/views/admin/admin_home.hbs
@@ -1,53 +1,56 @@
-<section>
-    <a href="/admin/add_product" class="btn btn-primary">Add Product</a>
-    <div class="container-fluid">
-        <div class="row mt-4 ">
-            <div class="col-md-12">
-                <table class="table table-hover ml-3" id="product_table">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Product</th>
-                            <th scope="col">Category</th>
-                            <th scope="col">Description</th>
-                            <th scope="col">Price</th>
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+            <tr>
+                <th scope="col" class="px-6 py-3">
+                    Product name
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Color
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Category
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Price
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Image
+                </th>
+                <th scope="col" class="px-6 py-3">
+                    Action
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each products}}
+            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                    {{this.Name}}
+                </th>
+                <td class="px-6 py-4">
+                    {{this.Color}}
+                </td>
+                <td class="px-6 py-4">
+                    {{this.Category}}
+                </td>
+                <td class="px-6 py-4">
+                   ₹ {{this.Price}}
+                </td>
+                <td class="px-6 py-4">
+                    <img src="/product_images/{{this._id}}.jpg" style="width: 50px; height:50px;" alt="">
+                </td>
+                <td class="px-6 py-4">
+                    <a href="/admin/edit_product?id={{this._id}}" class="font-medium text-blue-600 hover:text-blue-500" style="text-decoration: none;">
+                        Edit</a>
+                        <br>
+                    <a href="/admin/delete_product?id={{this._id}}" class="font-medium text-red-600 hover:text-red-500" style="text-decoration:none;"
+                    onclick="return confirm('Do you want to delete {{this.Name}}')">
+                        Delete</a>
 
-                            <th scope="col">Image</th>
-                            <th scope="col"></th>
-
-
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#each products}}
-                        <tr>
-                            <th scope="row">{{@index}}</th>
-                            <td>{{this.Name}}</td>
-                            <td>{{this.Category}}</td>
-                            <td>{{this.Description}}</td>
-                            <td>₹{{this.Price}}</td>
-
-                            <td><img src="/product_images/{{this._id}}.jpg" style="width: 50px; height:50px;" alt="">
-                            </td>
-                            <td>
-                                <a href="/admin/edit_product?id={{this._id}}" class="btn btn-primary">Edit</a>
-                                <a href="/admin/delete_product?id={{this._id}}" class="btn btn-danger"
-                                    onclick="return confirm('Do you want to delete {{this.Name}}')">Delete</a>
-
-                            </td>
-                        </tr>
-                        {{/each}}
-                    </tbody>
-                </table>
-            </div>
-
-        </div>
-    </div>
-</section>
-<script>
-    // code to make the above table into data table
- $(document).ready( function () {
-    $('#product_table').DataTable({
-        paging:false
-        })})
-</script>
+                </td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
+</div>
