--- a/views/admin/edit_product.hbs
+++ b/views/admin/edit_product.hbs
@@ -7,6 +7,8 @@
                 <input type="text" name="Name" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.Name}}">
                 <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Category</label>
                 <input type="text" name="Category" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.Category}}">
+                <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Color</label>
+                <input type="text" name="Color" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.Color}}">
                 <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Description</label>
                 <input type="text" name="Description" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.Description}}">
                 <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Price(₹)</label>
