--- a/views/partials/admin_header.hbs
+++ b/views/partials/admin_header.hbs
@@ -1,25 +1,37 @@
-<header class="">
-    <nav class="navbar navbar-expand-lg bg-body-secondary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/admin">Admin Panel</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/admin">All Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin/all_orders">All Orders</a>
-                    </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="#">All Customers</a>
-                    </li>
-                </ul>
-            </div>
+<header>
+  <nav class="bg-white dark:bg-gray-800 antialiased">
+    <div class="max-w-screen-xl px-4 mx-auto 2xl:px-0 py-4">
+      <div class="flex items-center justify-between">
+
+        <div class="flex items-center space-x-8">
+          <div class="shrink-0">
+            <a href="/admin" style="text-decoration: none;" title="" class="">
+              <h2>Handy Kart</h2>
+            </a>
+          </div>
+
+          <ul class="hidden lg:flex items-center justify-start gap-6 md:gap-8 py-3 sm:justify-center">
+            <li>
+              <a href="/admin" title="" style="text-decoration: none;"
+                class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
+                Products
+              </a>
+            </li>
+            <li class="shrink-0">
+              <a href="/admin/orders" title="" style="text-decoration: none;"
+                class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
+                Orders
+              </a>
+            </li>
+             <li class="shrink-0">
+              <a href="/admin/add_product" title="" style="text-decoration: none;"
+                class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
+                Add Product
+              </a>
+            </li>
+          </ul>
         </div>
-    </nav>
+      </div>
+    </div>
+  </nav>
 </header>
