--- a/views/partials/admin_header.hbs
+++ b/views/partials/admin_header.hbs
@@ -18,7 +18,7 @@
               </a>
             </li>
             <li class="shrink-0">
-              <a href="/admin/orders" title="" style="text-decoration: none;"
+              <a href="/admin/admin_orders" title="" style="text-decoration: none;"
                 class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
                 Orders
               </a>
